--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "rxjs": "^5.5.0",
     "semaphore-async-await": "^1.5.1",
     "string-similarity": "^1.1.0",
-    "typescript": "3.0.1",
+    "typescript": "~3.0.3",
     "vscode-jsonrpc": "^3.3.1",
     "vscode-languageserver": "^4.2.1",
     "vscode-languageserver-types": "^3.0.3"
